à corriger, ajout categorie et liste de produits, +selecteur

--- a/src/app/icd-product-list/icd-product-list.component.html
+++ b/src/app/icd-product-list/icd-product-list.component.html
@@ -1,4 +1,10 @@
 <h1>Liste des produits</h1>
+
+<select>
+    <option value="Smartphone">Smartphone</option>
+    <option value="TV">TV</option>
+</select>
+
 <table class="table table-striped" *ngIf="GetProducts().length > 0">
     <thead>
         <tr>
