y´a peut etre del´idee, mais c´est mal écrit

--- a/src/app/icd-product-list/icd-product-list.component.html
+++ b/src/app/icd-product-list/icd-product-list.component.html
@@ -1,8 +1,8 @@
 <h1>Liste des produits</h1>
 
 <select>
-    <option value="Smartphone">Smartphone</option>
-    <option value="TV">TV</option>
+    <option value="Smartphone" class="container-fluid">Smartphone</option>
+    <option value="TV" class="container-fluid">TV</option>
 </select>
 
 <table class="table table-striped" *ngIf="GetProducts().length > 0">
