correction des bugs + ajout de la grid CSS

--- a/src/app/icd-product-card/icd-product-card.component.html
+++ b/src/app/icd-product-card/icd-product-card.component.html
@@ -1,8 +1,8 @@
-<div class="card" style="width: 18rem;">
+<div class="card">
     <img class="card-img-top" src="..." alt="Card image cap">
     <div class="card-body">
       <h5 class="card-title">{{Product.title}}</h5>
-      <p class="card-text">{{Product.price}}, {{Product.dimensions}}, {{Product.colorId}}</p>
+      <p class="card-text">{{Product.price}}, {{Product.dimensions}}, {{Product.colors}}</p>
       <a href="#" class="btn btn-primary">Add to list</a>
     </div>
   </div>
