--- a/src/app/icd-product-card/icd-product-card.component.scss
+++ b/src/app/icd-product-card/icd-product-card.component.scss
@@ -2,3 +2,30 @@
   width: 250px;
   height: 350px;
 }
+
+.card-title{
+  font-size: 1rem;
+  font-weight: 700;
+}
+
+.card-img-top{
+  width: 250px;
+  height: 150px;
+}
+
+.card-price{
+  color: #44bd32;
+}
+
+.card-text{
+  font-size: small;
+  font-weight: 500;
+}
+
+.dot {
+  height: 13px;
+  width: 13px;
+  background-color: color;
+  border-radius: 50%;
+  display: inline-block;
+}
