header + finalize card component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,10 @@
-<app-icd-product-list></app-icd-product-list>
+<div class="container-fluid">
+  <!-- header -->
+  <app-icd-header></app-icd-header>
+
+  <!-- body -->
+  <div class="content">
+    <app-icd-product-list></app-icd-product-list>
+  </div>
+
+</div>
