--- a/src/app/icd-product-list/icd-product-list.component.html
+++ b/src/app/icd-product-list/icd-product-list.component.html
@@ -1,4 +1,3 @@
-<h1>Liste des produits</h1>
 <div class="container-fluid">
     <div class="row">
         <div class="col-md-2">
@@ -21,9 +20,10 @@
         </div>
 
         <div class="col-md-10">
-            
+
             <div class="products" *ngIf="FilteredProducts.length !== 0">
-                <app-icd-product-card *ngFor="let product of FilteredProducts" [Product]="product"></app-icd-product-card>
+                <app-icd-product-card *ngFor="let product of FilteredProducts" [Product]="product">
+                </app-icd-product-card>
             </div>
 
             <div *ngIf="FilteredProducts.length === 0">
