header is now centered

--- a/src/app/icd-header/icd-header.component.scss
+++ b/src/app/icd-header/icd-header.component.scss
@@ -1,5 +1,10 @@
 .img-logo{
-    width: 240px;
+    width: 200px;
     height: 100px;
 }
 
+.centered {
+    position: relative;
+    left: 50%;
+    transform: translateX(-100px);
+  }
