--- a/src/app/icd-header/icd-header.component.html
+++ b/src/app/icd-header/icd-header.component.html
@@ -1,10 +1,5 @@
 <nav class="navbar navbar-expand-xl navbar-dark bg-dark">
-  <a class="navbar-brand">Bienvenue sur ICD</a>
-  <div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav">
-      <li class="nav-item active">
-        <a class="nav-link">Liste des produits</a>
-      </li>
-    </ul>
-  </div>
+  <a class="navbar-brand centered">
+    <img class="img-logo" src="./pictures/ICD_LOGO_off.png">
+  </a>
 </nav> 
